# notebooklm-mcp

./: .mcp.json  .notebooklm.json  README.md  pyproject.toml
.claude/skills/notebooklm-sync/: SKILL.md
docs/plans/: 2026-03-09-notebooklm-mcp-design.md
src/notebooklm_mcp/: __init__.py  __main__.py  auth.py  server.py
src/notebooklm_mcp/tools/: __init__.py  artifacts.py  chat.py  notebooks.py  notes.py  research.py  sharing.py  sources.py
